# JPM

./: .gitignore  .pre-commit-config.yaml  README.md  environment-lint.yml  pyproject.toml  pytest.ini  working.yml
.github/workflows/: ci.yml
assets/question_1/: moody_ratings.parquet
assets/question_1/features/: AAPL_balance_sheet_features.json  AAPL_cash_flow_features.json  AAPL_equity_features.json  AAPL_income_statement_features.json  ABBV_balance_sheet_features.json  ABBV_cash_flow_features.json  ABBV_equity_features.json  ABBV_income_statement_features.json  ABT_balance_sheet_features.json  ABT_cash_flow_features.json  ABT_income_statement_features.json  ACN_balance_sheet_features.json  ACN_cash_flow_features.json  ACN_equity_features.json  ACN_income_statement_features.json  ADBE_balance_sheet_features.json  ADBE_cash_flow_features.json  ADBE_equity_features.json  ADBE_income_statement_features.json  ADI_balance_sheet_features.json  ADI_cash_flow_features.json  ADI_income_statement_features.json  ADSK_balance_sheet_features.json  ADSK_cash_flow_features.json  ADSK_income_statement_features.json  AEP_balance_sheet_features.json  AEP_cash_flow_features.json  AEP_equity_features.json  AEP_income_statement_features.json  AFL_balance_sheet_features.json  (+576 more)
ckpts/: best_model_ckpt.weights.h5
readmes_q3/: choice_learn.md  deephalo_replication.md  lu25_reoplication.md
results/question_1/: feature_importance.csv  lstm_evaluation.json  metadata.json  predictions.csv  test_predictions.csv  xgboost_model.json
scripts/: sweep.py
scripts/question_1/: construct_vp.py  construct_vp_tf.py  download_data.py  eval_ensemble.py  eval_lstm.py  eval_xgboost.py  evaluate.py  noplug_vp.py  parse_reports.py  sweep.py
scripts/question_3/: environment.yml  readme.md
src/jpm/: __init__.py  utils.py
tests/integration/: question_1.py
tests/question_1/: conftest.py  test_config.py  test_income_statement.py  test_misc.py  test_validation.py  test_vis.py
tests/question_3/: test_decoy_effect.py  test_equivariance.py  test_masking.py  test_overfit_tiny.py  test_smoke.py  test_wrapper_basic.py
tests/unit/: question_1.py  question_2.py  question_3.py  question_4.py
(+483 files in other folders)
