[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jpm"
version = "0.1.0"
description = "JPM ML exercises"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.3",
  "numpy>=1.26",
  "tensorflow>=2.14",
  "tensorflow-probability[tf]>=0.25",
  "scikit-learn>=1.3",
  "scipy>=1.11",
  "edgartools>=4.30",
  "pypdf>=6.5.0",
  "openai>=1.0",
  "colorama>=0.4",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "xgboost>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "black>=24.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["jpm*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = false

[tool.ruff]
line-length = 88
exclude = ["build", "dist", ".venv"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I", "B"]
ignore = ["E501"]  # Ignore line-too-long errors

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: slow integration tests",
    "unit: fast unit tests",
    "integration: broader multi-component tests",
]
